tests/errors/aster_not_for_pointer/test_2.c
#define s(a, b, c) a + b - c
#define k(a, b) a + b
#define l(a, b) a - k(a, b)

void main()
{
    int r = s(5, 6, 10); 
    /*
        длинный коментарий 
    */
    k(1, 0);
    11 + 12 *** 1 - 0 - 5;
}